<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mamoc Demo Apps</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="cloud">Public</string>
    <string name="mamoc">MAMoC</string>
    <string name="local">Local</string>
    <string name="edge">Edge</string>
    <string name="nearby">Nearby</string>
</resources>