<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/buttonLocal"
        android:layout_width="68dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="3dp"
        android:text="@string/local"
        app:layout_constraintEnd_toStartOf="@+id/buttonNearby"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileSizeRadioGroup" />

    <Button
        android:id="@+id/buttonEdge"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:layout_marginEnd="3dp"
        android:text="@string/edge"
        app:layout_constraintEnd_toStartOf="@+id/buttonCloud"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNearby"
        app:layout_constraintTop_toBottomOf="@+id/fileSizeRadioGroup" />

    <Button
        android:id="@+id/buttonNearby"
        android:layout_width="79dp"
        android:layout_height="52dp"
        android:layout_marginEnd="3dp"
        android:text="@string/nearby"
        app:layout_constraintEnd_toStartOf="@+id/buttonEdge"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonLocal"
        app:layout_constraintTop_toBottomOf="@+id/fileSizeRadioGroup" />

    <Button
        android:id="@+id/buttonCloud"
        android:layout_width="77dp"
        android:layout_height="54dp"
        android:layout_marginEnd="3dp"
        android:text="@string/cloud"
        app:layout_constraintEnd_toStartOf="@+id/buttonMamoc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonEdge"
        app:layout_constraintTop_toBottomOf="@+id/fileSizeRadioGroup" />

    <Button
        android:id="@+id/buttonMamoc"
        android:layout_width="90dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mamoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCloud"
        app:layout_constraintTop_toBottomOf="@+id/fileSizeRadioGroup" />

    <TextView
        android:id="@+id/sortOutput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEdge" />

    <RadioGroup
        android:id="@+id/fileSizeRadioGroup"
        android:layout_width="395dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/smallFileRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

        <RadioButton
            android:id="@+id/mediumFileRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

        <RadioButton
            android:id="@+id/largeFileRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchEditText" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>